--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.10.4",
+    "@apollo/client": "^3.10.5",
     "@hookform/resolvers": "^3.6.0",
-    "@nextui-org/react": "^2.4.1",
-    "@nextui-org/system": "^2.2.1",
-    "@nextui-org/theme": "^2.2.5",
+    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/system": "^2.2.2",
+    "@nextui-org/theme": "^2.2.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "apollo-upload-client": "^18.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
-    "graphql": "^16.8.1",
+    "graphql": "^16.8.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.390.0",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "sonner": "^1.5.0",
