--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/system": "^2.2.2",
     "@nextui-org/theme": "^2.2.6",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "apollo-upload-client": "^18.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.2.10",
     "graphql": "^16.8.2",
     "input-otp": "^1.2.4",
