--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-bg-patterns": "^0.3.0",
     "typescript": "^5"
   }
 }
